ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: 'cookie'
    nginx.ingress.kubernetes.io/session-cookie-name: 'stickounet' # Sets the name of the session cookie used for maintaining session affinity.
    nginx.ingress.kubernetes.io/session-cookie-expires: '172800' # Specifies the expiration time of the session cookie in seconds
    nginx.ingress.kubernetes.io/session-cookie-max-age: '172800'
spec:
  rules:
    - host: www.fabflixs.com
      http:
        paths:
          - path: /fabFlix
            pathType: Prefix
            backend:
              service:
                name: fabflix-backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fabflix-frontend-service
                port:
                  number: 3000
